<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CateringFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/catering_image"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:text="@string/image_placeholder"
        android:gravity="center"
        android:background="@color/custom01"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/catering_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/catering_name_placeholder"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/catering_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/catering_email_placeholder"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_margin="4dp"/>

    <TextView
        android:id="@+id/catering_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/catering_address_placeholder"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_margin="4dp"/>

    <TextView
        android:id="@+id/catering_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/catering_phone_placeholder"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_margin="4dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/packet_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>